src/bigqueryParser.cpp

// Generated from C:/Users/96ahi/Documents/BigQuery_Parser/src\bigquery.g4 by ANTLR 4.7


#include "bigqueryListener.h"
#include "bigqueryVisitor.h"

#include "bigqueryParser.h"


using namespace antlrcpp;
using namespace antlr4;

bigqueryParser::bigqueryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

bigqueryParser::~bigqueryParser() {
  delete _interpreter;
}

std::string bigqueryParser::getGrammarFileName() const {
  return "bigquery.g4";
}

const std::vector<std::string>& bigqueryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& bigqueryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Query_statementContext ------------------------------------------------------------------

bigqueryParser::Query_statementContext::Query_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bigqueryParser::Query_exprContext* bigqueryParser::Query_statementContext::query_expr() {
  return getRuleContext<bigqueryParser::Query_exprContext>(0);
}

bigqueryParser::With_statementContext* bigqueryParser::Query_statementContext::with_statement() {
  return getRuleContext<bigqueryParser::With_statementContext>(0);
}


size_t bigqueryParser::Query_statementContext::getRuleIndex() const {
  return bigqueryParser::RuleQuery_statement;
}

void bigqueryParser::Query_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery_statement(this);
}

void bigqueryParser::Query_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery_statement(this);
}


antlrcpp::Any bigqueryParser::Query_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bigqueryVisitor*>(visitor))
    return parserVisitor->visitQuery_statement(this);
  else
    return visitor->visitChildren(this);
}

bigqueryParser::Query_statementContext* bigqueryParser::query_statement() {
  Query_statementContext *_localctx = _tracker.createInstance<Query_statementContext>(_ctx, getState());
  enterRule(_localctx, 0, bigqueryParser::RuleQuery_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == bigqueryParser::WITH) {
      setState(112);
      with_statement();
    }
    setState(115);
    query_expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Query_exprContext ------------------------------------------------------------------

bigqueryParser::Query_exprContext::Query_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bigqueryParser::Select_statementContext *> bigqueryParser::Query_exprContext::select_statement() {
  return getRuleContexts<bigqueryParser::Select_statementContext>();
}

bigqueryParser::Select_statementContext* bigqueryParser::Query_exprContext::select_statement(size_t i) {
  return getRuleContext<bigqueryParser::Select_statementContext>(i);
}

std::vector<bigqueryParser::Set_opContext *> bigqueryParser::Query_exprContext::set_op() {
  return getRuleContexts<bigqueryParser::Set_opContext>();
}

bigqueryParser::Set_opContext* bigqueryParser::Query_exprContext::set_op(size_t i) {
  return getRuleContext<bigqueryParser::Set_opContext>(i);
}

bigqueryParser::Order_clauseContext* bigqueryParser::Query_exprContext::order_clause() {
  return getRuleContext<bigqueryParser::Order_clauseContext>(0);
}

bigqueryParser::Limit_clauseContext* bigqueryParser::Query_exprContext::limit_clause() {
  return getRuleContext<bigqueryParser::Limit_clauseContext>(0);
}

bigqueryParser::Query_exprContext* bigqueryParser::Query_exprContext::query_expr() {
  return getRuleContext<bigqueryParser::Query_exprContext>(0);
}


size_t bigqueryParser::Query_exprContext::getRuleIndex() const {
  return bigqueryParser::RuleQuery_expr;
}

void bigqueryParser::Query_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery_expr(this);
}

void bigqueryParser::Query_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery_expr(this);
}


antlrcpp::Any bigqueryParser::Query_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bigqueryVisitor*>(visitor))
    return parserVisitor->visitQuery_expr(this);
  else
    return visitor->visitChildren(this);
}

bigqueryParser::Query_exprContext* bigqueryParser::query_expr() {
  Query_exprContext *_localctx = _tracker.createInstance<Query_exprContext>(_ctx, getState());
  enterRule(_localctx, 2, bigqueryParser::RuleQuery_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(136);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bigqueryParser::SELECT: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        select_statement();
        setState(123);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(118);
            set_op();
            setState(119);
            select_statement(); 
          }
          setState(125);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        }
        setState(127);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          setState(126);
          order_clause();
          break;
        }

        }
        setState(130);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          setState(129);
          limit_clause();
          break;
        }

        }
        break;
      }

      case bigqueryParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(132);
        match(bigqueryParser::T__0);
        setState(133);
        query_expr();
        setState(134);
        match(bigqueryParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_statementContext ------------------------------------------------------------------

bigqueryParser::Select_statementContext::Select_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bigqueryParser::Select_statementContext::SELECT() {
  return getToken(bigqueryParser::SELECT, 0);
}

bigqueryParser::Expression_listContext* bigqueryParser::Select_statementContext::expression_list() {
  return getRuleContext<bigqueryParser::Expression_listContext>(0);
}

bigqueryParser::From_statementContext* bigqueryParser::Select_statementContext::from_statement() {
  return getRuleContext<bigqueryParser::From_statementContext>(0);
}

bigqueryParser::Where_statementContext* bigqueryParser::Select_statementContext::where_statement() {
  return getRuleContext<bigqueryParser::Where_statementContext>(0);
}

bigqueryParser::Group_statementContext* bigqueryParser::Select_statementContext::group_statement() {
  return getRuleContext<bigqueryParser::Group_statementContext>(0);
}

bigqueryParser::Having_statementContext* bigqueryParser::Select_statementContext::having_statement() {
  return getRuleContext<bigqueryParser::Having_statementContext>(0);
}

tree::TerminalNode* bigqueryParser::Select_statementContext::ALL() {
  return getToken(bigqueryParser::ALL, 0);
}

tree::TerminalNode* bigqueryParser::Select_statementContext::DISTINCT() {
  return getToken(bigqueryParser::DISTINCT, 0);
}


size_t bigqueryParser::Select_statementContext::getRuleIndex() const {
  return bigqueryParser::RuleSelect_statement;
}

void bigqueryParser::Select_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelect_statement(this);
}

void bigqueryParser::Select_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelect_statement(this);
}


antlrcpp::Any bigqueryParser::Select_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bigqueryVisitor*>(visitor))
    return parserVisitor->visitSelect_statement(this);
  else
    return visitor->visitChildren(this);
}

bigqueryParser::Select_statementContext* bigqueryParser::select_statement() {
  Select_statementContext *_localctx = _tracker.createInstance<Select_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, bigqueryParser::RuleSelect_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    match(bigqueryParser::SELECT);
    setState(140);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(139);
      _la = _input->LA(1);
      if (!(_la == bigqueryParser::ALL

      || _la == bigqueryParser::DISTINCT)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    }
    setState(142);
    expression_list();
    setState(144);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(143);
      from_statement();
      break;
    }

    }
    setState(147);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(146);
      where_statement();
      break;
    }

    }
    setState(150);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(149);
      group_statement();
      break;
    }

    }
    setState(153);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(152);
      having_statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expression_listContext ------------------------------------------------------------------

bigqueryParser::Expression_listContext::Expression_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bigqueryParser::Alias_exprContext *> bigqueryParser::Expression_listContext::alias_expr() {
  return getRuleContexts<bigqueryParser::Alias_exprContext>();
}

bigqueryParser::Alias_exprContext* bigqueryParser::Expression_listContext::alias_expr(size_t i) {
  return getRuleContext<bigqueryParser::Alias_exprContext>(i);
}

std::vector<bigqueryParser::Star_exprContext *> bigqueryParser::Expression_listContext::star_expr() {
  return getRuleContexts<bigqueryParser::Star_exprContext>();
}

bigqueryParser::Star_exprContext* bigqueryParser::Expression_listContext::star_expr(size_t i) {
  return getRuleContext<bigqueryParser::Star_exprContext>(i);
}

std::vector<bigqueryParser::Except_statementContext *> bigqueryParser::Expression_listContext::except_statement() {
  return getRuleContexts<bigqueryParser::Except_statementContext>();
}

bigqueryParser::Except_statementContext* bigqueryParser::Expression_listContext::except_statement(size_t i) {
  return getRuleContext<bigqueryParser::Except_statementContext>(i);
}

std::vector<bigqueryParser::Replace_statementContext *> bigqueryParser::Expression_listContext::replace_statement() {
  return getRuleContexts<bigqueryParser::Replace_statementContext>();
}

bigqueryParser::Replace_statementContext* bigqueryParser::Expression_listContext::replace_statement(size_t i) {
  return getRuleContext<bigqueryParser::Replace_statementContext>(i);
}


size_t bigqueryParser::Expression_listContext::getRuleIndex() const {
  return bigqueryParser::RuleExpression_list;
}

void bigqueryParser::Expression_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression_list(this);
}

void bigqueryParser::Expression_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression_list(this);
}


antlrcpp::Any bigqueryParser::Expression_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bigqueryVisitor*>(visitor))
    return parserVisitor->visitExpression_list(this);
  else
    return visitor->visitChildren(this);
}

bigqueryParser::Expression_listContext* bigqueryParser::expression_list() {
  Expression_listContext *_localctx = _tracker.createInstance<Expression_listContext>(_ctx, getState());
  enterRule(_localctx, 6, bigqueryParser::RuleExpression_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(163);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(155);
      star_expr();
      setState(157);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(156);
        except_statement();
        break;
      }

      }
      setState(160);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(159);
        replace_statement();
        break;
      }

      }
      break;
    }

    case 2: {
      setState(162);
      alias_expr();
      break;
    }

    }
    setState(178);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(165);
        match(bigqueryParser::T__2);
        setState(174);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
        case 1: {
          setState(166);
          star_expr();
          setState(168);
          _errHandler->sync(this);

          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
          case 1: {
            setState(167);
            except_statement();
            break;
          }

          }
          setState(171);
          _errHandler->sync(this);

          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
          case 1: {
            setState(170);
            replace_statement();
            break;
          }

          }
          break;
        }

        case 2: {
          setState(173);
          alias_expr();
          break;
        }

        } 
      }
      setState(180);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Star_exprContext ------------------------------------------------------------------

bigqueryParser::Star_exprContext::Star_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bigqueryParser::ExprContext* bigqueryParser::Star_exprContext::expr() {
  return getRuleContext<bigqueryParser::ExprContext>(0);
}


size_t bigqueryParser::Star_exprContext::getRuleIndex() const {
  return bigqueryParser::RuleStar_expr;
}

void bigqueryParser::Star_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStar_expr(this);
}

void bigqueryParser::Star_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStar_expr(this);
}


antlrcpp::Any bigqueryParser::Star_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bigqueryVisitor*>(visitor))
    return parserVisitor->visitStar_expr(this);
  else
    return visitor->visitChildren(this);
}
